Issue #16: Interim commit.

--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -39,7 +39,11 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 	<script>
 	function onTabsShow(event, ui)
 	{
-		fitToContainer(".svg-cfg");
+		// Get the svg for this tab.
+		var svg = $(ui.panel).find(".svg-cfg");
+		
+		// Fit it to its container.
+		fitToContainer(svg, ui.panel /*".svg-cfg"*/);
 		//$( "#cfdebugout" ).text("ui.panel.id=" + ui.panel.id);
 	}
 	$(function() {
@@ -122,7 +126,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 	</div>
 	<div id="tabs-3">
 		<p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
-		<object type="image/svg+xml" data="die.svg"></object>
+		<object class="svg-cfg" type="image/svg+xml" data="die.svg"></object>
 	</div>
 </div>
 
