Issue #16: Interim commit.

--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -91,6 +91,8 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 
 <body>
 
+<p><!-- P_TITLE --></p>
+
 <div>
 <p>Debug info:</p>
 <p id="cfdebugout">xxxx</p>
@@ -102,6 +104,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 		<li><a href="#tabs-1">decode_switches()</a></li>
 		<li><a href="#tabs-2">die()</a></li>
 		<li><a href="#tabs-3">Aenean lacinia</a></li>
+		<!-- TAB_LIST -->
 	</ul>
 	<div id="tabs-1">
 		<p>Paragraph</p>
@@ -115,6 +118,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 		<p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
 		<object class="svg-cfg" type="image/svg+xml" data="die.svg"></object>
 	</div>
+	<!-- TAB_PANEL_LIST -->
 </div>
 
 </body>
