--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -21,7 +21,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 
 	<title>Insert title here</title>
 
-	<link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.24.custom.css">
+	<link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.9.0.custom.min.css">
 	<style>
 	#resizable { width: 150px; height: 150px; padding: 0.5em; }
 	#resizable h3 { text-align: center; margin: 0; }
@@ -101,11 +101,17 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 
 <div id="tabs" class="ui-tabs">
 	<ul>
+		<!-- REMOVE_START -->
 		<li><a href="#tabs-1">decode_switches()</a></li>
 		<li><a href="#tabs-2">die()</a></li>
 		<li><a href="#tabs-3">Aenean lacinia</a></li>
+		<!-- REMOVE_END -->
+		
+		<!-- TAB_LIST_START -->
 		<!-- TAB_LIST -->
 	</ul>
+	
+	<!-- REMOVE_START -->
 	<div id="tabs-1">
 		<p>Paragraph</p>
 		<object class="svg-cfg" type="image/svg+xml" data="decode_switches.svg"></object>
@@ -118,6 +124,9 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 		<p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
 		<object class="svg-cfg" type="image/svg+xml" data="die.svg"></object>
 	</div>
+	<!-- REMOVE_END -->
+
+	<!-- TAB_PANEL_LIST_START -->	
 	<!-- TAB_PANEL_LIST -->
 </div>
 
