--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -21,7 +21,8 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 
 	<title>Insert title here</title>
 
-	<link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.9.0.custom.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.9.0.custom.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css">
 	<style>
 	#resizable { width: 150px; height: 150px; padding: 0.5em; }
 	#resizable h3 { text-align: center; margin: 0; }
@@ -32,15 +33,14 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 		margin-left:auto;
  		margin-right:auto;
 	}
-	
-	/*.ui-tabs .ui-tabs-hide {
-    position: absolute;
-    left: -10000px;
-	}*/
 	</style>
 	
-	<script src="js/jquery-1.8.0.min.js"></script>
-	<script src="js/jquery-ui-1.8.24.custom.min.js"></script>
+	<!-- 
+	<script src="js/jquery-1.8.2.js"></script>
+	<script src="js/jquery-ui-1.9.0.custom.min.js"></script>
+	-->
+	<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+	<script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
 	<script src="js/coflo.resizer.js"></script>
 	<script>
 	$(function() {
@@ -60,7 +60,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 		}
 		
 		/**
-		 * Event handler callback for fitting the svg's to the tab control.
+		 * Event handler callback for fitting the svg's to the tab control when a new tab is selected.
 		 */
 		function onTabsShow(event, ui)
 		{
